Minor edits from peer review
Made simple edits and fixed typos/grammar where needed.

--- a/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
@@ -1,21 +1,21 @@
 [[my-services-tab]]
 
-== Services Tab
+== The Services Tab
 
 The *Services* tab lists all available services with a summary of information associated with each service, including the *Service Name*, its current *Power State* represented by an icon, *Number of VMs*, *Owner*, date *Created*, and *Retires* date. Additionally, you can see the chargeback cost per service for a virtual machine's month-to-date usage. You can filter or sort services by those entities, and by *Relative Cost*. 
 
-On the same screen, you have the option to edit the service name and description, edit tags, set ownership, retire the service now or at a later date, or remove the service. You can also perform power operations on virtual machines by clicking more options _(represented by three dots)_ next to the service.
+On the same screen, you have the option to edit the service name and description, edit tags, set ownership, retire the service now or at a later date, or remove the service. You can also perform power operations on virtual machines by clicking the more options button _(represented by three dots)_ next to the service.
 
 image:ssui-services-menu.png[]
 
-There is now the option to perform most of these tasks in bulk (except editing service details and power operations). In order to do so, select the services and then click the designated button for the required task on the upper-left corner of the screen. 
+You can perform most of these tasks in bulk (except editing service details and power operations). In order to do so, select the services and then click the designated button for the required task on the upper right corner of the screen. 
 
-Additionally, click on a service to view more details, including information on associated virtual machines and snapshots, and its relationships data.
+Additionally, click on a service to view more details, including information on associated virtual machines and snapshots, and its relationship data.
 
 [[html5-console]]
 === Accessing the HTML5 Console
 
-Follow this procedure to get HTML5 console access to the virtual machine. The console is the remote control system that enables you to work and interact directly with your virtual machines. 
+Follow this procedure to get HTML5 console access to the virtual machine. The console is the remote control system that enables you to interact directly with your virtual machines. 
 
 . From the *Services* screen, click on the required service.
 . In *Resources*, click the image:ssui-access-button.png[Access Button] button next to the virtual machine and select *Open HTML5 Console*.
@@ -41,7 +41,7 @@ image:ssui-schedule-service-retirement.png[]
 Follow this procedure to retire a service immediately. For retiring a service at a later date, see xref:schedule-retirement[].
 
 . From the *Services* screen, click on the service you want to retire now.
-. Click the image:ssui-retirement-button.png[Service Retire Button] button located on the upper-right corner of the screen, then select *Retire*. The *Retire Service Now* window will appear to confirm your action.
+. Click the image:ssui-retirement-button.png[Service Retire Button] button located on the upper right corner of the screen, then select *Retire*. The *Retire Service Now* window will appear to confirm your action.
 image:ssui-retire-service-now.png[]
 . Click *Yes, Retire Service Now*.
 
@@ -49,19 +49,17 @@ image:ssui-retire-service-now.png[]
 
 Follow this procedure to set ownership of a service. 
 
-. From the *Services* screen, click on more options next to the service you want set ownership for, then click *Set Ownership*.
-. Alternatively, click on the service. Click the image:ssui-service-settings-button.png[] button located on the upper-right corner of the screen, then select *Set Ownership*.
+. From the *Services* screen, click on the more options button next to the service you want set ownership for, then click *Set Ownership*. Alternatively, click on the service. Click the image:ssui-service-settings-button.png[] button located on the upper-right corner of the screen, then select *Set Ownership*.
 image:ssui-set-service-ownership.png[]
 . Select an owner from the list.
 . Select a group from the list.
 . Click *Save*.
 
-=== Adding / Editing Tags
+=== Adding and Editing Tags
 
 Follow this procedure to add or edit tags for a service. 
 
-. From the *Services* screen, click on more options next to the service you want add or edit tags for, then click *Edit Tags*.
-. Alternatively, click on the service. Click the image:ssui-edit-tags-button.png[] button located on the upper-right corner of the screen, then select *Edit Tags*.
+. From the *Services* screen, click on more options next to the service you want add or edit tags for, then click *Edit Tags*. Alternatively, click on the service. Click the image:ssui-edit-tags-button.png[] button located on the upper-right corner of the screen, then select *Edit Tags*.
 image:ssui-add-edit-tags.png[]
 . To add a tag, select the tag category and value from the lists, then click the blue plus (+) sign as shown in the screen capture.
 . To edit tags, simply change the value assigned to a category, or click on the cross sign in the tag to delete an existing tag.
@@ -71,25 +69,23 @@ image:ssui-add-edit-tags.png[]
 
 Follow this procedure to remove a service. 
 
-. From the *Services* screen, click on more options next to the service you want to remove, then click *Remove*.
-. Alternatively, click on the service. Click the image:ssui-service-settings-button.png[] button located on the upper-right corner of the screen, then select *Remove*. A confirmation window appears.
+. From the *Services* screen, click on more options next to the service you want to remove, then click *Remove*. Alternatively, click on the service. Click the image:ssui-service-settings-button.png[] button located on the upper-right corner of the screen, then select *Remove*. A confirmation window appears.
 . Click *Yes, Remove Service*.
 
 === Editing a Service
 
 Follow this procedure to edit the name and description of a service.
 
-. From the *Services* screen, click on more options next to the service you want to remove, then click *Edit*.
-. Alternatively, click on the service. Click the image:ssui-service-settings-button.png[] button located on the upper-right corner of the screen, then select *Edit*. An *Edit Service* screen appears.
+. From the *Services* screen, click on more options next to the service you want to edit, then click *Edit*. Alternatively, click on the service. Click the image:ssui-service-settings-button.png[] button located on the upper-right corner of the screen, then select *Edit*. An *Edit Service* screen appears.
 . Edit the name and description of the service as required.
 image:ssui-edit-service.png[]
 . Click *Save*.
 
 === Cockpit Integration
 
-Cockpit is an interactive Linux server administrative interface. You can perform simple administration tasks such as starting containers, storage administration, network configuration, and inspecting logs. While cockpit allows you to monitor and administer several servers at the same time, your browser connects to a primary server that runs the Cockpit web service through which connections to additional servers can be established.
+Cockpit is an interactive Linux server administrative interface. You can perform simple administration tasks such as starting containers, storage administration, network configuration, and inspecting logs. While Cockpit allows you to monitor and administer several servers at the same time, your browser connects to a primary server that runs the Cockpit web service through which connections to additional servers can be established.
 
-{product-title} full administrative user interface and the Self Service user interface have enabled for users to access the Cockpit interface for a given virtual machine. 
+The {product-title} full administrative user interface and the Self Service user interface have enabled for users to access the Cockpit interface for a given virtual machine. 
 
 ==== Accessing the Cockpit Interface
 
@@ -98,7 +94,7 @@ Cockpit is an interactive Linux server administrative interface. You can perform
 Cockpit must be pre-configured and running on the virtual machine. 
 ====
 
-The option to open the Cockpit console for a virtual machine is available in the image:ssui-access-button.png[Access Button] button, which also houses the option to open HTML5 Console, in the *Resources* section inside the *Services* tab. 
+You can open the Cockpit console for a virtual machine from the image:ssui-access-button.png[Access Button] button. 
 
 . From the *Services* screen, click on the service associated with the virtual machine you want to open the Cockpit console for.
 . In *Resources*, click *Access* next to the virtual machine and select *Open Cockpit Console*. A notification will appear to show the Cockpit interface is loading. 
