Minor fixes to link format
Fixed the link format for sections in external books to line up with our standard methods[1]
[1] For example:
See https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#cpu_sizing_assistant_for_a_dedicated_vmdb_html[CPU Sizing Assistant for a Dedicated VMDB Host] in the _Deployment Planning Guide_

--- a/doc-QuickStart_OpenShift_Provider_Guide/topics/ose-metrics.adoc
+++ b/doc-QuickStart_OpenShift_Provider_Guide/topics/ose-metrics.adoc
@@ -61,11 +61,11 @@ $ oadm policy add-cluster-role-to-user \
 [[ose-metrics-storage]]
 == Configuring Metrics Components
 
-The Metrics Deployer installs and configures the components required for OpenShift Enterprise metrics. By default, the Metrics Deployer uses _self-signed certificates_ to secure communication between components. This document assumes that you will use this default. For information on alternative secure communication setups, see https://access.redhat.com/documentation/en/openshift-enterprise/version-3.2/installation-and-configuration/#metrics-deployer-using-secrets[Using Secrets in the OpenShift Enterprise Installation and Configuration documentation].
+The Metrics Deployer installs and configures the components required for OpenShift Enterprise metrics. By default, the Metrics Deployer uses _self-signed certificates_ to secure communication between components. This document assumes that you will use this default. For information on alternative secure communication configurations, see https://access.redhat.com/documentation/en/openshift-enterprise/version-3.2/installation-and-configuration/#metrics-deployer-using-secrets[Using Secrets] in the OpenShift Enterprise _Installation and Configuration_ documentation.
 
 [NOTE]
 ===================
-This section is an abridged version of a more detailed chapter, namely https://access.redhat.com/documentation/en/openshift-enterprise/version-3.2/installation-and-configuration/#metrics-data-storage[Metrics Data Storage in the OpenShift Enterprise Installation and Configuration documentation]. Refer to that chapter for more information on how to deploy the metrics plug-in using persistent and non-persistent storage.
+This section is an abridged version of a more detailed chapter, namely https://access.redhat.com/documentation/en/openshift-enterprise/version-3.2/installation-and-configuration/#metrics-data-storage[Metrics Data Storage] in the OpenShift Enterprise _Installation and Configuration_ documentation. Refer to that chapter for more information on how to deploy the metrics plug-in using persistent and non-persistent storage.
 ===================
 
 [[ose-metrics-deploy]]
@@ -77,7 +77,7 @@ Before deploying OpenShift metrics, choose a storage option, then log in as an a
 
 Deploying with persistent storage::
 
-With _persistent storage_, OpenShift metrics will be stored on a persistent volume. This offers metrics data protection by allowing it to survive a pod recreation or restart. OpenShift metrics requires a specifically configured persistent volume; see https://access.redhat.com/documentation/en/openshift-enterprise/version-3.2/architecture/#architecture-additional-concepts-storage[Persistent Volumes in the OpenShift Enterprise Architecture documentation]. 
+With _persistent storage_, OpenShift metrics will be stored on a persistent volume. This offers metrics data protection by allowing it to survive a pod recreation or restart. OpenShift metrics requires a specifically configured persistent volume; see https://access.redhat.com/documentation/en/openshift-enterprise/version-3.2/architecture/#architecture-additional-concepts-storage[Persistent Volumes] in the OpenShift Enterprise _Architecture_ documentation. 
 +
 //When preparing the persistent volume, note its _size_, as this will be used later in xref:ose-metrics-deploy[].
 +
