--- a/doc-Managing_Providers/topics/Managing_Containers.adoc
+++ b/doc-Managing_Providers/topics/Managing_Containers.adoc
@@ -52,14 +52,14 @@ include::common/topology_widget.adoc[]
 . Click the desired containers provider for viewing the provider summary.
 . On the provider summary page, click *Topology* in the *Overview* box on the right-hand side of the page.
 
-==== Viewing the Topology for Container Provider Projects
+=== Viewing the Topology for Container Provider Projects
 . Navigate to menu:Compute[Containers > Providers].
 . Choose the desired containers provider for viewing the provider summary.
 . Click on *Projects* on the summary page. 
 . Select the desired project.
 . On the projects summary page, click the topology view button. 
 
-==== Limiting the Number of Containers Shown in the Topology View
+=== Limiting the Number of Containers Shown in the Topology View
 . Navigate to menu:Configuration[My Settings] and click on the *Visual* tab.
 . Select the number of container items from the drop-down under *Topology Default Items in View*.
 . Click *Save*.
