--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -978,6 +978,11 @@ This group must be in the LDAP directory source you specified for the server. Se
 
 {product-title} can have multiple LDAP groups configured, which the appliance will attempt to authenticate with one by one until it succeeds. The lookup priority of these groups can be rearranged; to configure the order in which {product-title} looks up LDAP groups:
 
+[NOTE]
+====
+On initial login, a user's _current group_ assignment is the highest priority group. User group membership, on subsequent logins, is set as the last assigned group from the prior session,
+====
+
 . From the settings menu, select *Configuration*.
 . Click on the *Access Control* accordion, then click *Groups*.
 . Click image:1847.png[] (*Configuration*), and image:plus_green.png[] (*Edit Sequence of User Groups for LDAP Look Up*) to prioritize which group a user will default to if LDAP returns multiple matching groups.
