--- a/doc-Managing_Providers/topics/Managing_Containers.adoc
+++ b/doc-Managing_Providers/topics/Managing_Containers.adoc
@@ -53,11 +53,11 @@ include::common/topology_widget.adoc[]
 . On the provider summary page, click *Topology* in the *Overview* box on the right-hand side of the page.
 
 === Viewing the Topology for Container Provider Projects
-. Navigate to menu:Compute[Containers > Providers].
-. Choose the desired containers provider for viewing the provider summary.
-. Click on *Projects* on the summary page. 
-. Select the desired project.
-. On the projects summary page, click the topology view button. 
+The project topology page displays the project as the center node, surrounded by its related entities. 
+
+. Navigate to menu:Compute[Containers > Projects].
+. Click on a project.
+. On the project summary page, click the topology view button. 
 
 === Limiting the Number of Containers Shown in the Topology View
 . Navigate to menu:Configuration[My Settings] and click on the *Visual* tab.
