Implemented peer review suggestions.

--- a/doc-Deployment_Planning_Guide/topics/planning.adoc
+++ b/doc-Deployment_Planning_Guide/topics/planning.adoc
@@ -69,52 +69,54 @@ For information on how to configure centralized administration via database repl
 [[tenants]]
 === Tenancy
 
-{product-title} supports multitenancy, letting you isolate one tenant’s resources and user accounts from another. It allows for siloed organizations that have separate authentication and users, different branding, and different security. 
+{product-title} supports multitenancy, letting you isolate one tenant’s resources and user accounts from another. It allows you to create and manage siloed organizations that have separate authentication and users, different branding, and different security settings. 
 
 Tenants can be totally separate or they can be in a parent-child or peer relationship. Tenants in a relationship can share or inherit a certain configuration. You can subdivide and create child tenants and they, in turn, can have child tenants, and so on. The ability to have multi-level (nested) tenants in a hierarchy enables those at the bottom to inherit permissions from those above. This configuration allows for granular user permissions to be set on specific tenants.  
 
-Besides, tenants can also have projects as children. A project is a self-contained tenant, that is it cannot have a child tenant, and is useful to allocate resources to a small group or team within a larger organization.
+A tenant can also contain a self-contained child tenant known as a 'project'. A project cannot have a child tenant, but is useful to allocate resources to a small group or team within a larger organization.
 
 [NOTE]
 ====
-If you choose not to add any additional tenants, everything is in a single base tenant which is your {product-title_short} appliance itself which in {product-title_short} is sometimes referred as 'tenant zero'.
+If you do not to add any additional tenants, all resources and user accounts are contained in a single base tenant which is your {product-title_short} appliance itself. In {product-title_short}, is sometimes referred as 'tenant zero'.
 ====
 
-In {product-title_short}, the following two roles are associated with tenancy:
+In {product-title_short}, the following two account roles are associated with tenancy:
  
 * Tenant administrator
 * Tenant quota administrator
 
+See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/general_configuration/#roles[Account Roles and Descriptions] in the _General Configuration_ guide for more information about these roles.
+
 [IMPORTANT]
 ====
-Tenant administrator and tenant quota administrator roles are like administrator and super administrator. These roles are not limited to the tenant upon which they are acting and act across all tenants, therefore should be considered privileged users. Keep in mind these are not roles inside a tenant.
+Tenant administrator and tenant quota administrator roles are like administrator and super administrator. These roles are not limited to the tenant upon which they are acting and act across all tenants, and therefore should be considered privileged users. These are not roles inside a tenant.
 ====
 
 Tenancy Models::
 
 The following two approaches exist for tenancy planning:
 
-* *Tenantless* - Similar to the previous system without tenancy support, you can create a single large tenant and perform all your operations in there without any subdivision of resources or user accounts.
-* *Enterprise model* - A common scenarios is to create a single tenant, and then subdivide it based on the structures or departments within your organization. Those departments are then able to further subdivide their resources into distinct projects. With this model, you have a single URL for user access, while still having the ability to divide resources into nested hierarchical tenants.
+* *Tenantless* - You can create a single large tenant, sometimes referred as 'tenant zero', and perform all your operations in there without any subdivision of resources or user accounts.
+* *Enterprise model* - A common scenario is to create a single tenant, and then subdivide it based on the structures or departments within your organization. Those departments are then able to further subdivide their resources into distinct projects. With this model, you have a single URL for user access, while still having the ability to divide resources into nested hierarchical tenants.
 
 Tenancy Configuration::
 
-You can create and configure tenancy using the {product-title_short} user interface in the same place you setup users, groups and roles by selecting *Configuration* from the settings menu, and then clicking on the *Access Control* accordion. See the section on https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/general_configuration/#access-control[Access Control] in the _General Configuration_ guide for procedures on how to create tenants and projects, users and groups, and related procedures.
+You can create and configure tenancy using the {product-title_short} user interface in the same place you set up users, groups and roles by selecting *Configuration* from the settings menu, and then clicking on the *Access Control* accordion. See the section on https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/general_configuration/#access-control[Access Control] in the _General Configuration_ guide for procedures on how to create tenants and projects, users and groups.
 
 Tenancy in Automation::
 
-One of the features of tenancy is that each tenant can have its own automate domain. Tenant-based domains can help in several use cases, such as, if you have:
+One of the features of tenancy is that each tenant can have its own automate domain. Tenant-based domains can help in several use cases, such as if you have:
 
 • groups that need their own naming routines
-• to tackle varying types of approval needs
-• some departments that use different end ticketing systems
-• customer who is a holding company or centralized IT organization for managing different business units
+• varying types of approval needs
+• departments that use different end ticketing systems
+• a customer who is a holding company or centralized IT organization for managing different business units
 
-Note that just like standard domain are nested, you can also add automate domains that are nested at the tenant level. For the procedure on how to create a new automate domain and other related procedures, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/scripting_actions_in_cloudforms/[Scripting Actions in CloudForms].
+Just like standard domains are nested, you can also add automate domains that are nested at the tenant level. For the procedure on how to create a new automate domain, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/scripting_actions_in_cloudforms/[Scripting Actions in CloudForms].
 
 Tenancy Quota and Reporting::
 
-You can allocate and enforce quotas for the following attributes.
+You can allocate and enforce quotas for the following attributes:
 
 * Virtual CPUs
 * Memory in GB
@@ -124,21 +126,17 @@ You can allocate and enforce quotas for the following attributes.
 
 See the section on https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/general_configuration/#access-control[Managing Tenant and Project Quotas] in the _General Configuration_ guide for procedures on how to create and manage quotas.
 
-You can generate or schedule a report for *Tenant Quotas* similar to other reports. See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/monitoring_alerts_and_reporting/#sect_reports[Reports] in the _Monitoring Alerts, and Reporting_ guide for procedures on how to view or schedule a report. 
+You can generate or schedule a report for *Tenant Quotas* similar to other reports. See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/monitoring_alerts_and_reporting/#sect_reports[Reports] in the _Monitoring, Alerts, and Reporting_ guide for procedures on how to view or schedule a report. 
 
-*Example*:
+The following example shows a tenant quota report:
 
 image:tenant-quotas-report.png[]
 
 * Total Quota: Total quota enforced per attribute for a tenant
-* In Use: Amount currently in use by tenants
+* In Use: Amount of quota currently in use by tenants
 * Allocated: Amount of quota given to all child tenants
 * Available: _Total Quota_ minus (-) _In Use_ minus (-) _Allocated_
 
-[NOTE]
-====
-You will see in the report all of the tenants but there is no nesting information available yet.
-====
 
 Tenancy Chargeback::
 
@@ -148,11 +146,11 @@ See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-si
 
 Tenancy Service Catalogs::
 
-Similar to automate domains, you can have service catalog at each level of tenancy. Once you add a service catalog at a particular level of tenancy, it is visible to that tenant and its children (unless you use tagging to exclude).
+Similar to automate domains, you can have service catalogs at each level of tenancy. Once you add a service catalog at a particular level of tenancy, it is visible to that tenant and its children (unless you use tagging to exclude).
 
 Tenancy Providers::
 
-Providers can be added at any level of tenancy. Once added, it is visible to any child or lower tenants, making it possible to easily separate resources that are owned or accessed by one group, and should not be available to other tenants. 
+Providers can be added at any level of tenancy. Once added, a provider is visible to any child or lower tenants, making it possible to easily separate resources that are owned or accessed by one group, and should not be available to other tenants. 
    
 
 [[example-postgresql-configuration-file]]
