--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -980,7 +980,7 @@ This group must be in the LDAP directory source you specified for the server. Se
 
 [NOTE]
 ====
-On initial login, a user's _current group_ assignment is the highest priority group. User group membership, on subsequent logins, is set as the last assigned group from the prior session,
+On initial login, a user's _current group_ assignment is the highest priority group. User group membership, on subsequent logins, is set as the last assigned group from the prior session.
 ====
 
 . From the settings menu, select *Configuration*.
