Conditionalized the links to CFME guides.

--- a/doc-Deployment_Planning_Guide/topics/planning.adoc
+++ b/doc-Deployment_Planning_Guide/topics/planning.adoc
@@ -80,12 +80,16 @@ A tenant can also contain a self-contained child tenant known as a 'project'. A 
 If you do not to add any additional tenants, all resources and user accounts are contained in a single base tenant which is your {product-title_short} appliance itself. In {product-title_short}, is sometimes referred as 'tenant zero'.
 ====
 
+Tenancy Account Roles::
+
 In {product-title_short}, the following two account roles are associated with tenancy:
  
 * Tenant administrator
 * Tenant quota administrator
 
+ifdef::cfme[]
 See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/general_configuration/#roles[Account Roles and Descriptions] in the _General Configuration_ guide for more information about these roles.
+endif::cfme[]
 
 [IMPORTANT]
 ====
@@ -101,7 +105,7 @@ The following two approaches exist for tenancy planning:
 
 Tenancy Configuration::
 
-You can create and configure tenancy using the {product-title_short} user interface in the same place you set up users, groups and roles by selecting *Configuration* from the settings menu, and then clicking on the *Access Control* accordion. See the section on https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/general_configuration/#access-control[Access Control] in the _General Configuration_ guide for procedures on how to create tenants and projects, users and groups.
+You can create and configure tenancy using the {product-title_short} user interface in the same place you set up users, groups and roles by selecting *Configuration* from the settings menu, and then clicking on the *Access Control* accordion. ifdef::cfme[] See the section on https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/general_configuration/#access-control[Access Control] in the _General Configuration_ guide for procedures on how to create tenants and projects, users, and groups. endif::cfme[]
 
 Tenancy in Automation::
 
@@ -112,7 +116,7 @@ One of the features of tenancy is that each tenant can have its own automate dom
 • departments that use different end ticketing systems
 • a customer who is a holding company or centralized IT organization for managing different business units
 
-Just like standard domains are nested, you can also add automate domains that are nested at the tenant level. For the procedure on how to create a new automate domain, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/scripting_actions_in_cloudforms/[Scripting Actions in CloudForms].
+Just like standard domains are nested, you can also add automate domains that are nested at the tenant level. ifdef::cfme[] For the procedure on how to create a new automate domain, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/scripting_actions_in_cloudforms/[Scripting Actions in CloudForms]. endif::cfme[]
 
 Tenancy Quota and Reporting::
 
@@ -124,9 +128,14 @@ You can allocate and enforce quotas for the following attributes:
 * Number of virtual machines
 * Number of templates
 
+ifdef::cfme[]
 See the section on https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/general_configuration/#access-control[Managing Tenant and Project Quotas] in the _General Configuration_ guide for procedures on how to create and manage quotas.
+endif::cfme[]
 
-You can generate or schedule a report for *Tenant Quotas* similar to other reports. See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/monitoring_alerts_and_reporting/#sect_reports[Reports] in the _Monitoring, Alerts, and Reporting_ guide for procedures on how to view or schedule a report. 
+You can generate or schedule a report for *Tenant Quotas* similar to other reports.
+ifdef::cfme[]
+See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/monitoring_alerts_and_reporting/#sect_reports[Reports] in the _Monitoring, Alerts, and Reporting_ guide for procedures on how to view or schedule a report.
+endif::cfme[] 
 
 The following example shows a tenant quota report:
 
@@ -142,7 +151,9 @@ Tenancy Chargeback::
 
 You have the ability to do tenancy in chargeback where you are able to assign rates and have a different rate for each tenant. You can make use of the default rate or create your own set of rates depending on the tenant. As well, there is an ability to create chargeback reports by tenant. 
 
+ifdef::cfme[]
 See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/monitoring_alerts_and_reporting/#sect_chargeback[Chargeback] in the _Monitoring Alerts, and Reporting_ guide for information on how to create and assign default or custom chargeback rates, and how {product-title_short} calculates chargeback costs. 
+endif::cfme[]
 
 Tenancy Service Catalogs::
 
