--- a/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
+++ b/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
@@ -1,6 +1,30 @@
 [[automation_management_providers]]
 = Automation Management Providers
 
+EDIT! FROM INFRASTRUCTURE SECTION 
+
+In {product-title}, an automation management provider EDIT is a virtual infrastructure environment that you can add to a {product-title_short} appliance to manage and interact with the resources in that environment. This chapter describes the different types of infrastructure providers that you can add to {product-title_short}, and how to manage them. Infrastructure providers can be either discovered automatically by {product-title_short}, or added individually.
+
+
+The web interface uses virtual thumbnails to represent providers.
+Each thumbnail contains four quadrants by default, which display basic information about each provider.
+
+
+image:2189.png[]
+
+. Number of hosts
+. Management system software
+. Currently unused
+. Authentication status
+
+[cols="1,1", frame="all", options="header"]
+|===
+|		Icon  |	Description 
+| image:2190.png[] | Validated: Valid authentication credentials have been added.
+| image:2191.png[] | 	Invalid: Authentication credentials are invalid.
+| image:2192.png[] | Unknown: Authentication status is unknown or no credentials have been entered.
+|===
+
 
 [[ansible-inside]]
 == Ansible
