--- a/doc-Managing_Providers/topics/Cloud_Providers.adoc
+++ b/doc-Managing_Providers/topics/Cloud_Providers.adoc
@@ -1,7 +1,32 @@
 [[cloud_providers]]
 = Cloud Providers
 
-In {product-title}, a cloud provider is a cloud computing environment that you can add to a {product-title} appliance to manage and interact with the resources in that environment. This chapter describes the different types of cloud providers that you can add to {product-title}, and how to manage them.
+In {product-title_short}, a cloud provider is a cloud computing environment that you can add to a {product-title_short} appliance to manage and interact with the resources in that environment. This chapter describes the different types of cloud providers that you can add to {product-title_short}, and how to manage them. Cloud providers can be either discovered automatically by {product-title_short}, or added individually.
+
+EDIT THUMBNAIL AND EXPLANATION (THIS FROM INFRASTRUCTURE PROVIDERS)
+
+The web interface uses virtual thumbnails to represent providers.
+Each thumbnail contains four quadrants by default, which display basic information about each provider.
+
+
+image:2189.png[]
+
+. Number of hosts
+. Management system software
+. Currently unused
+. Authentication status
+
+[cols="1,1", frame="all", options="header"]
+|===
+|		Icon  |	Description 
+| image:2190.png[] | Validated: Valid authentication credentials have been added.
+| image:2191.png[] | 	Invalid: Authentication credentials are invalid.
+| image:2192.png[] | Unknown: Authentication status is unknown or no credentials have been entered.
+|===
+
+
+:leveloffset: 2
+include::Discovering_Multiple_Cloud_Systems.adoc[]
 
 :leveloffset: 2
 = OpenStack Providers
