--- a/doc-Managing_Providers/topics/Containers_Providers.adoc
+++ b/doc-Managing_Providers/topics/Containers_Providers.adoc
@@ -2,14 +2,16 @@
 
 A containers provider is a service that manages container resources, and can be added to the {product-title} appliance.
 
-{product-title} can connect to OpenShift Container Platform containers providers and manage them similarly to infrastructure and cloud providers. This allows you to gain control over different aspects of your environment and answer questions, such as:
+//Dayle note - this description looks newish, probably doesn't need editing
+
+{product-title_short} can connect to OpenShift Container Platform containers providers and manage them similarly to infrastructure and cloud providers. This allows you to gain control over different aspects of your environment and answer questions, such as:
 
 * How many containers exist in my environment?
 * Does a specific node have enough resources?
 * How many distinct images are used?
 * Which image registries are used?
 
-When {product-title} connects to a container's environment, it collects information on different areas of the environment:
+When {product-title_short} connects to a container's environment, it collects information on different areas of the environment:
 
 * Entities such as pods, nodes, or services.
 * Basic relationships between the entities, for example: Which services are serving which pods?
@@ -18,6 +20,27 @@ When {product-title} connects to a container's environment, it collects informat
 
 You can manage policies for containers entities by adding tags. All containers entities except volumes can be tagged.
 
+
+EDIT THUMBNAIL AND EXPLANATION (THIS FROM INFRASTRUCTURE PROVIDERS)
+
+The web interface uses virtual thumbnails to represent providers.
+Each thumbnail contains four quadrants by default, which display basic information about each provider.
+
+
+image:2189.png[]
+
+. Number of hosts
+. Management system software
+. Currently unused{product-title_short}
+. Authentication status
+
+[cols="1,1", frame="all", options="header"]
+|===
+|		Icon  |	Description 
+| image:2190.png[] | Validated: Valid authentication credentials have been added.
+| image:2191.png[] | 	Invalid: Authentication credentials are invalid.
+| image:2192.png[] | Unknown: Authentication status is unknown or no credentials have been entered.
+|===
 
 :leveloffset: 2
 [[Obtaining_OpenShift_Container_Platform_Management_Token]]
