--- a/doc-Managing_Providers/topics/Infrastructure_Providers.adoc
+++ b/doc-Managing_Providers/topics/Infrastructure_Providers.adoc
@@ -1,7 +1,7 @@
 [[infrastructure_providers]]
 = Infrastructure Providers
 
-In {product-title}, an infrastructure provider is a virtual infrastructure environment that you can add to a {product-title} appliance to manage and interact with the resources in that environment. This chapter describes the different types of infrastructure providers that you can add to {product-title}, and how to manage them.
+In {product-title}, an infrastructure provider is a virtual infrastructure environment that you can add to a {product-title_short} appliance to manage and interact with the resources in that environment. This chapter describes the different types of infrastructure providers that you can add to {product-title_short}, and how to manage them. Infrastructure providers can be either discovered automatically by {product-title_short}, or added individually.
 
 
 The web interface uses virtual thumbnails to represent providers.
@@ -17,55 +17,10 @@ image:2189.png[]
 
 [cols="1,1", frame="all", options="header"]
 |===
-|
-
-								Icon
-
-
-|
-
-								Description
-
-
-
-|
-
-
-image:2190.png[]
-
-
-
-|
-
-								Validated: Valid authentication credentials have been added.
-
-
-
-|
-
-
-image:2191.png[]
-
-
-
-|
-
-								Invalid: Authentication credentials are invalid.
-
-
-
-|
-
-
-image:2192.png[]
-
-
-
-|
-
-								Unknown: Authentication status is unknown or no credentials have been entered.
-
-
+|		Icon  |	Description 
+| image:2190.png[] | Validated: Valid authentication credentials have been added.
+| image:2191.png[] | 	Invalid: Authentication credentials are invalid.
+| image:2192.png[] | Unknown: Authentication status is unknown or no credentials have been entered.
 |===
 
 :leveloffset: 2
