--- a/doc-Managing_Providers/topics/Middleware_Providers.adoc
+++ b/doc-Managing_Providers/topics/Middleware_Providers.adoc
@@ -1,7 +1,31 @@
 [[middleware_providers]]
 = Middleware Providers
 
-In {product-title}, a middleware provider is a middleware management environment that you can add to a {product-title} appliance to manage and interact with the resources in that environment. This chapter describes the different types of middleware providers that you can add to {product-title}, and how to manage them. 
+In {product-title}, a middleware provider is a middleware management environment that you can add to a {product-title_short} appliance to manage and interact with the resources in that environment. This chapter describes the different types of middleware providers that you can add to {product-title_short}, and how to manage them. 
+
+
+EDIT! FROM INFRASTRUCTURE SECTION 
+
+
+The web interface uses virtual thumbnails to represent providers.
+Each thumbnail contains four quadrants by default, which display basic information about each provider.
+
+
+image:2189.png[]
+
+. Number of hosts
+. Management system software
+. Currently unused
+. Authentication status
+
+[cols="1,1", frame="all", options="header"]
+|===
+|		Icon  |	Description 
+| image:2190.png[] | Validated: Valid authentication credentials have been added.
+| image:2191.png[] | 	Invalid: Authentication credentials are invalid.
+| image:2192.png[] | Unknown: Authentication status is unknown or no credentials have been entered.
+|===
+
 
 [[middleware-management]]
 == Middleware Management
