--- a/doc-Managing_Providers/topics/Networking_Providers.adoc
+++ b/doc-Managing_Providers/topics/Networking_Providers.adoc
@@ -1,7 +1,35 @@
 [[network_providers]]
 = Network Providers
 
-{product-title} has introduced a new provider type called *_Network Managers_*. This new provider type exposes software-defined networking (SDN) providers starting with _OpenStack Network (Neutron)_, _Azure Network_, and _Amazon EC2 Network_. The software-defined networking inventory collection is enabled for OpenStack, Amazon and Azure providers. The OpenStack Network provider collects inventory of floating IPs from OpenStack so that IPs can be allocated without querying OpenStack database every time. Also, it refreshes all Neutron data from both OpenStack and OpenStack Infrastructure, and extracts the Neutron logic to a shared place. Note that management via the network providers configuration is currently disabled.
+EDIT THUMBNAIL AND EXPLANATION (THIS FROM INFRASTRUCTURE PROVIDERS)
+
+In {product-title}, a network manager provider is a (???virtual infrastructure environment) that you can add to a {product-title_short} appliance to ?? manage your resources. 
+
+This provider type exposes software-defined networking (SDN) providers starting with _OpenStack Network (Neutron)_, _Azure Network_, and _Amazon EC2 Network_. The software-defined networking inventory collection is enabled for OpenStack, Amazon and Azure providers. The OpenStack Network provider collects inventory of floating IPs from OpenStack so that IPs can be allocated without querying OpenStack database every time. Also, it refreshes all Neutron data from both OpenStack and OpenStack Infrastructure, and extracts the Neutron logic to a shared place. Note that management via the network providers configuration is currently disabled.
+
+This chapter describes the different types of network manager ? providers available to {product-title_short}, and how to manage them. Network providers must be added individually to {product-title_short}.
+
+(EDIT)
+
+The web interface uses virtual thumbnails to represent providers.
+Each thumbnail contains four quadrants by default, which display basic information about each provider.
+
+
+image:2189.png[]
+
+. Number of hosts
+. Management system software
+. Currently unused
+. Authentication status
+
+[cols="1,1", frame="all", options="header"]
+|===
+|		Icon  |	Description 
+| image:2190.png[] | Validated: Valid authentication credentials have been added.
+| image:2191.png[] | 	Invalid: Authentication credentials are invalid.
+| image:2192.png[] | Unknown: Authentication status is unknown or no credentials have been entered.
+|===
+
 
 :leveloffset: 2
 include::Adding_Viewing_Network_Providers.adoc[]
