--- a/doc-Managing_Providers/topics/Storage_Managers.adoc
+++ b/doc-Managing_Providers/topics/Storage_Managers.adoc
@@ -1,7 +1,31 @@
 [[storage_managers]]
 = Storage Managers
 
-In {product-title}, a storage manager is a service providing storage resources that you can manage from a {product-title} appliance. This chapter describes the different types of storage managers used by {product-title}, and how to manage them.
+In {product-title_short}, a storage manager is a service providing storage resources that you can manage from a {product-title_short} appliance. This chapter describes the different types of storage managers used by {product-title_short}, and how to manage them.
+
+
+EDIT! FROM INFRASTRUCTURE SECTION 
+
+
+The web interface uses virtual thumbnails to represent providers.
+Each thumbnail contains four quadrants by default, which display basic information about each provider.
+
+
+image:2189.png[]
+
+. Number of hosts
+. Management system software
+. Currently unused
+. Authentication status
+
+[cols="1,1", frame="all", options="header"]
+|===
+|		Icon  |	Description 
+| image:2190.png[] | Validated: Valid authentication credentials have been added.
+| image:2191.png[] | 	Invalid: Authentication credentials are invalid.
+| image:2192.png[] | Unknown: Authentication status is unknown or no credentials have been entered.
+|===
+
 
 include::common/openstack/storage-manager-available.adoc[]
 
