--- a/doc-Managing_Providers/topics/Managing_Containers.adoc
+++ b/doc-Managing_Providers/topics/Managing_Containers.adoc
@@ -37,7 +37,7 @@ image:containers-overview.png[Containers Overview]
 . Navigate to menu:Compute[Containers > Overview].
 . Click the desired containers entity, or provider, if applicable, for viewing the summary with further information.
 
-include::Viewing_an_Object_Summary.adoc[]
+include::Viewing_an_Object_Summary.adoc[]atom   
 
 [[using-the-topology-widget]]
 == Using the Topology Widget
@@ -50,17 +50,17 @@ include::common/topology_widget.adoc[]
 === Viewing the Topology for Container Providers
 . Navigate to menu:Compute[Containers > Providers].
 . Click the desired containers provider for viewing the provider summary.
-. On the provider summary page, click *Topology* in the *Overview* box on the right-hand side of the page.
+. On the provider summary page, click *Topology* in *Overview* box on the right-hand side of the page.
 
 === Viewing the Topology for Container Provider Projects
 The project topology page displays the project as the center node, surrounded by its related entities. 
 
 . Navigate to menu:Compute[Containers > Projects].
 . Click on a project.
-. On the project summary page, click the topology view button. 
+. On the project summary page, click image:topologyviewbutton.png[Topology View button] (*Topology View*) on the top right-hand side of the page. 
 
 === Limiting the Number of Containers Shown in the Topology View
-. Navigate to menu:Configuration[My Settings] and click on the *Visual* tab.
+. Navigate to menu:settings menu[My Settings] and click on the *Visual* tab.
 . Select the number of container items from the drop-down under *Topology Default Items in View*.
 . Click *Save*.
 
