--- a/doc-Managing_Providers/topics/Managing_Containers.adoc
+++ b/doc-Managing_Providers/topics/Managing_Containers.adoc
@@ -37,7 +37,7 @@ image:containers-overview.png[Containers Overview]
 . Navigate to menu:Compute[Containers > Overview].
 . Click the desired containers entity, or provider, if applicable, for viewing the summary with further information.
 
-include::Viewing_an_Object_Summary.adoc[]atom   
+include::Viewing_an_Object_Summary.adoc[]   
 
 [[using-the-topology-widget]]
 == Using the Topology Widget
