Minor peer review edits

--- a/doc-Deployment_Planning_Guide/topics/planning.adoc
+++ b/doc-Deployment_Planning_Guide/topics/planning.adoc
@@ -73,11 +73,11 @@ For information on how to configure centralized administration via database repl
 
 Tenants can be totally separate or they can be in a parent-child or peer relationship. Tenants in a relationship can share or inherit a certain configuration. You can subdivide and create child tenants and they, in turn, can have child tenants, and so on. The ability to have multi-level (nested) tenants in a hierarchy enables those at the bottom to inherit permissions from those above. This configuration allows for granular user permissions to be set on specific tenants.  
 
-A tenant can also contain a self-contained child tenant known as a 'project'. A project cannot have a child tenant, but is useful to allocate resources to a small group or team within a larger organization.
+A tenant can also contain a self-contained child tenant known as a 'project'. A project cannot have a child tenant, but is useful for allocating resources to a small group or team within a larger organization.
 
 [NOTE]
 ====
-If you do not to add any additional tenants, all resources and user accounts are contained in a single base tenant which is your {product-title_short} appliance itself. In {product-title_short}, is sometimes referred as 'tenant zero'.
+If you do not add any additional tenants, all resources and user accounts are contained in a single base tenant which is your {product-title_short} appliance itself. In {product-title_short}, is sometimes referred as 'tenant zero'.
 ====
 
 Tenancy Account Roles::
