--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -2083,7 +2083,7 @@ To create a project:
 . Click *Add*.
 
 [[creating-a-project-quota]]
-==== Managing Tenant and Project Quota
+==== Managing Tenant and Project Quotas
 
 Use the following procedure to allocate or edit quotas for tenants and projects.
 
@@ -2102,7 +2102,7 @@ To tag tenants and projects:
 
 . From the settings menu, select *Configuration*.
 . Click on the *Access Control* accordion, then click *Tenants*.
-. Select the tenant or project then click *Policy*, and select *Edit My Company Tags for this Tenant*.
+. Select the tenant or project, then click *Policy*, and select *Edit My Company Tags for this Tenant*.
 . In *Tag Assignment*, click *Select a customer tag to assign*, and select a tag from the list. In the next column, set a corresponding value.
 . Click *Save*.
 
