Removed GUI label markup for settings menu
Changed the asciidoc markup for the settings menu to reflect that it's not an official UI name.

--- a/doc-Managing_Providers/topics/Managing_Containers.adoc
+++ b/doc-Managing_Providers/topics/Managing_Containers.adoc
@@ -50,7 +50,7 @@ include::common/topology_widget.adoc[]
 === Viewing the Topology for Container Providers
 . Navigate to menu:Compute[Containers > Providers].
 . Click the desired containers provider for viewing the provider summary.
-. On the provider summary page, click *Topology* in *Overview* box on the right-hand side of the page.
+. On the provider summary page, click *Topology* in the *Overview* box on the right-hand side of the page.
 
 === Viewing the Topology for Container Provider Projects
 The project topology page displays the project as the center node, surrounded by its related entities. 
@@ -60,7 +60,7 @@ The project topology page displays the project as the center node, surrounded by
 . On the project summary page, click image:topologyviewbutton.png[Topology View button] (*Topology View*) on the top right-hand side of the page. 
 
 === Limiting the Number of Containers Shown in the Topology View
-. Navigate to menu:settings menu[My Settings] and click on the *Visual* tab.
+. Navigate to the settings menu, then *My Settings*, and click on the *Visual* tab.
 . Select the number of container items from the drop-down under *Topology Default Items in View*.
 . Click *Save*.
 
